# deep-planning

./: .gitignore  CONTRACT_VERSIONING.md  Makefile  PALAMEDES_INQUIRY.md  README.md  STABILITY.md  deepplan.py  deepplan_agent.py  deepplan_client.py  deepplan_server.py  deepplan_store.py  palamedes.py  palamedes_agent.py  palamedes_client.py  palamedes_conformance.py  palamedes_host_contract.py  palamedes_reference_adapter.py  palamedes_reference_consumer.ts  palamedes_reference_host.py  palamedes_server.py  pyproject.toml  setup.py
docs/: channel-copy.md  deepplan-agents-skills.md  (+8 more)
scaffolds/deepplan_agents/: README.md  pyproject.toml
scaffolds/deepplan_agents/evals/: reference-retrieval.json
scaffolds/deepplan_agents/src/deepplan_agents/: console.py  insight_persistence.py  reference_collectors.py  reference_embeddings.py  reference_eval.py  reference_rag.py  reference_store.py  strategy_llm.py  strategy_prompt.py
scaffolds/deepplan_agents/src/deepplan_agents/contracts/: host-action-contract.json
scaffolds/deepplan_agents/src/deepplan_agents/prompts/: mid-project-intake.md  personal-planning-profile.md  strategist-system.md
scaffolds/deepplan_agents/src/deepplan_agents/runtime/: host_step.py
scaffolds/deepplan_agents/tests/: test_adapter_and_planner_loop.py  test_console.py  test_insight_persistence.py  test_reference_embeddings.py  test_reference_eval.py  test_reference_rag.py  test_reference_store.py  test_registry.py  test_strategy_llm.py  test_strategy_prompt.py
scaffolds/palamedes_agents/: README.md  pyproject.toml
scaffolds/palamedes_agents/evals/: agent-cycle-cases.json  generic-baseline-system.md  reviews.example.json
scaffolds/palamedes_agents/examples/: reference-patterns.json
scaffolds/palamedes_agents/src/palamedes_agents/: __init__.py  bootstrap.py  console.py  insight_persistence.py  reference_collectors.py  reference_embeddings.py  reference_eval.py  reference_rag.py  reference_store.py  strategy_benchmark.py  strategy_llm.py  strategy_prompt.py  strategy_routes.py
scaffolds/palamedes_agents/tests/: test_adapter_and_planner_loop.py  test_agent_cycle.py  test_console.py  test_insight_persistence.py  test_reference_embeddings.py  test_reference_eval.py  test_reference_rag.py  test_reference_store.py  test_registry.py  test_strategy_benchmark.py  test_strategy_llm.py  test_strategy_prompt.py  test_strategy_routes.py
(+107 files in other folders)
