[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deepplan-agents"
version = "0.1.0"
description = "Skill-aware orchestration scaffold for DeepPlan."
requires-python = ">=3.9"

[project.scripts]
deepplan-agents = "deepplan_agents.console:main"

[project.optional-dependencies]
openai = ["openai"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["deepplan_agents*"]

[tool.setuptools.package-data]
deepplan_agents = [
  "contracts/*.json",
  "schemas/*.json",
  "skills/*.json",
  "skills/manifests/*.json",
  "prompts/*.md",
]
